2014-10-20  Youenn Fablet  <youenn.fablet@crf.canon.fr>

        Tighten XMLHttpRequest setRequestHeader value check
        https://bugs.webkit.org/show_bug.cgi?id=128593

        Reviewed by Darin Adler.

        Added a test originating from w3c-test.org to test header values checking.
        Testing headers with non ASCII characters and various control characters. 

        * http/tests/xmlhttprequest/set-bad-headervalue-expected.txt: Added.
        * http/tests/xmlhttprequest/set-bad-headervalue.html: Added.

2014-10-15  Andrei Bucur  <abucur@adobe.com>

        ASSERTION  FAILED in WebCore::RenderFlowThread::getRegionRangeForBox
        https://bugs.webkit.org/show_bug.cgi?id=135563

        Reviewed by David Hyatt.

        A test verifying that positioned elements inside multi-column containers don't
        cause assertions or crashes.

        * fast/multicol/multicol-all-positioned-crash-expected.txt: Added.
        * fast/multicol/multicol-all-positioned-crash.html: Added.
        * fast/multicol/multicol-transform-containing-block-expected.txt: Added.
        * fast/multicol/multicol-transform-containing-block.html: Added.

2014-10-14  Alejandro G. Castro  <alex@igalia.com>

        Changes in the stretchy attribute do not update rendering
        https://bugs.webkit.org/show_bug.cgi?id=136883

        Reviewed by Darin Adler.

        The test updates the stretchy value in a timeout.

        * mathml/presentation/mo-stretch-update-expected.html: Added.
        * mathml/presentation/mo-stretch-update.html: Added.

2014-10-12  Mike West  <mkwst@chromium.org>

        Referrer Policy: Update <meta name="referrer"> values to match the spec
        https://bugs.webkit.org/show_bug.cgi?id=137635

        Reviewed by Jochen Eisinger.

        * http/tests/security/referrer-policy-https-no-referrer-expected.txt: Added.
        * http/tests/security/referrer-policy-https-no-referrer-when-downgrade-expected.txt: Added.